# kMancala

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README.md
doc/: CMakeLists.txt  index.cache.bz2  index.docbook
icons/: icon.xcf
src/: CMakeLists.txt  ai.cpp  ai.h  board.cpp  board.h  controller.cpp  controller.h  kmancala.cpp  kmancala.desktop  kmancala.h  kmancala.kcfg  kmancalaboard.cpp  kmancalaboard.h  kmancalaboardgap.cpp  kmancalaboardgap.h  kmancalahistory.cpp  kmancalahistory.h  kmancalahistoryitem.cpp  kmancalahistoryitem.h  kmancalamain.cpp  kmancalamain.h  kmancalaplayersettingsdialog.cpp  kmancalaplayersettingsdialog.h  kmancalaprefs.cpp  kmancalaprefs.h  kmancalaprefs.kcfgc  kmancalarenderer.cpp  kmancalarenderer.h  kmancalaui.rc  main.cpp  main.h  player.cpp  player.h
themes/: cherry.svgz  default.svgz
